charts/front-end/front-end.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaccinatiepunt-frontend-web
  namespace: vaccinatiepunt
spec:
  replicas: 1
  selector:
      matchLabels:
        app: vaccinatiepunt-frontend 
        tier: web
  template:
    metadata:
      name: vaccinatiepunt-frontend
      labels:
        app: vaccinatiepunt-frontend
        tier: web
    spec:
      containers:
      - name: vaccinatiepunt-frontend

        image: gcr.io/vaccinatiepunt/vaccinatie_punt_inventaris-main-frontend:latest
        ports:
          - containerPort: 8080
        imagePullPolicy: Always

        resources: {}

status: {}
