charts/front-end/front_end_ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaccinatiepunt-frontend-web
  annotations:
    kubernetes.io/ingress.global-static-ip-name: vaccinatiepunt-ip
  labels:
    app: vaccinatiepunt-frontend
spec:
  defaultBackend:
    service:
      name: vaccinatiepunt-frontend-svc
      port:
        number: 80

---

apiVersion: v1
kind: Service
metadata:
  name: vaccinatiepunt-frontend-svc
  labels:
    app: vaccinatiepunt-frontend
spec:
  selector:
    app: vaccinatiepunt-frontend
    tier: web
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
